feat(editor): implement functional rich text editor

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "lint": "eslint --ext .ts,.tsx .",
+    "install-wsl": "npm install && npm uninstall electron && export npm_config_platform=win32 && npm install -D electron && unset npm_config_platform"
   },
   "keywords": [],
   "author": {
@@ -34,7 +35,7 @@
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-react": "^4.4.1",
-    "electron": "36.1.0",
+    "electron": "^36.1.0",
     "eslint": "^8.57.1",
     "eslint-plugin-import": "^2.31.0",
     "postcss": "^8.5.3",
@@ -50,7 +51,17 @@
     "@emotion/styled": "^11.14.0",
     "@mantine/core": "^7.17.7",
     "@mantine/hooks": "^7.17.7",
+    "@mantine/tiptap": "^7.17.7",
     "@tabler/icons-react": "^3.31.0",
+    "@tiptap/extension-highlight": "^2.11.9",
+    "@tiptap/extension-link": "^2.11.9",
+    "@tiptap/extension-subscript": "^2.11.9",
+    "@tiptap/extension-superscript": "^2.11.9",
+    "@tiptap/extension-text-align": "^2.11.9",
+    "@tiptap/extension-underline": "^2.11.9",
+    "@tiptap/pm": "^2.11.9",
+    "@tiptap/react": "^2.11.9",
+    "@tiptap/starter-kit": "^2.11.9",
     "electron-squirrel-startup": "^1.0.1",
     "marked": "^15.0.11",
     "react": "^19.1.0",
