--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "@electron/fuses": "^1.8.0",
     "@types/electron-squirrel-startup": "^1.0.2",
     "@types/marked": "^6.0.0",
+    "@types/node": "^22.15.17",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-react": "^4.4.1",
-    "electron": "^36.1.0",
+    "electron": "^36.2.0",
     "eslint": "^8.57.1",
     "eslint-plugin-import": "^2.31.0",
     "postcss": "^8.5.3",
@@ -62,6 +63,7 @@
     "@tiptap/pm": "^2.11.9",
     "@tiptap/react": "^2.11.9",
     "@tiptap/starter-kit": "^2.11.9",
+    "electron-log": "^5.4.0",
     "electron-squirrel-startup": "^1.0.1",
     "marked": "^15.0.11",
     "react": "^19.1.0",
