--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "typeRoots": [
       "./node_modules/@types",
       "./src/types"
-    ]
+    ],
+    "types": []
   },
   "include": [
     "src"
